--- a/GigaWebMvc/Views/Home/About.cshtml
+++ b/GigaWebMvc/Views/Home/About.cshtml
@@ -4,4 +4,8 @@
 <h2>@ViewData["Title"]</h2>
 <h3>@ViewData["Message"]</h3>
 
-<p>Use this area to provide additional information.</p>
+<p>Usuário @ViewData["User"]</p>
+
+<address>
+    <strong>More information: </strong> <a href="https://www.instagram.com/gigalanchesbar">instagram.com/gigalanchesbar</a>
+</address>
